examples/invalid/36_duplicate_top_level_value.lane
// invalid: top-level values share one namespace
module Main

let answer : Int = 1

let answer : Int = 2
